[package]
name = "epimetheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-recursion = "1.0.5"
async-trait = "0.1.77"
az = "1.2.1"
either = "1.10.0"
indoc = "2.0.4"
lazy_static = "1.4.0"
num-traits = "0.2.18"
page_size = "0.6.0"
phf = { version = "0.11.2", features = ["macros"] }
pin-project = "1.1.4"
rand = "0.8.5"
replace_with = "0.1.7"
rug = "1.24.0"
serenity = "0.12.0"
smallvec = { version = "1.13.2", features = ["union"] }
smol_str = "0.2.2"
tokio = { version = "1.39.0", features = ["macros", "rt-multi-thread"] }
trait-variant = "0.1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
